--- a/YanikPerera-cobsccomp182p-007/Base.lproj/LaunchScreen.storyboard
+++ b/YanikPerera-cobsccomp182p-007/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +15,72 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pqz-Ix-ZJX">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X4H-Ol-W8H">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="850"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="sxQ-ga-ant">
+                                                <rect key="frame" x="2" y="220" width="410" height="230"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NIBM-Logo.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="yjJ-q0-5IY">
+                                                        <rect key="frame" x="5" y="0.0" width="400" height="180"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="400" id="J0L-fI-TvK"/>
+                                                            <constraint firstAttribute="height" constant="180" id="nGg-7K-czj"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NIBM Events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2PI-hu-Unz">
+                                                        <rect key="frame" x="135" y="200" width="140" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="140" id="KKe-HO-HKu"/>
+                                                            <constraint firstAttribute="height" constant="30" id="ikp-W6-57d"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
+                                                        <color key="textColor" red="0.1040215404609099" green="0.072634193738152691" blue="0.44576855964467021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="sxQ-ga-ant" secondAttribute="trailing" constant="2" id="8e2-DL-0Ec"/>
+                                            <constraint firstAttribute="height" constant="850" id="Czq-YA-QjV"/>
+                                            <constraint firstItem="sxQ-ga-ant" firstAttribute="leading" secondItem="X4H-Ol-W8H" secondAttribute="leading" constant="2" id="IIC-ZP-cm4"/>
+                                            <constraint firstItem="sxQ-ga-ant" firstAttribute="top" secondItem="X4H-Ol-W8H" secondAttribute="top" constant="220" id="h4W-ZT-eHe"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="X4H-Ol-W8H" firstAttribute="leading" secondItem="Pqz-Ix-ZJX" secondAttribute="leading" id="GC4-bG-Yhb"/>
+                                    <constraint firstItem="X4H-Ol-W8H" firstAttribute="top" secondItem="Pqz-Ix-ZJX" secondAttribute="top" id="VJi-a6-Myf"/>
+                                    <constraint firstAttribute="trailing" secondItem="X4H-Ol-W8H" secondAttribute="trailing" id="lTR-4q-vfH"/>
+                                    <constraint firstAttribute="bottom" secondItem="X4H-Ol-W8H" secondAttribute="bottom" id="m21-Bc-Bgd"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Pqz-Ix-ZJX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WHM-Zb-rT6"/>
+                            <constraint firstItem="Pqz-Ix-ZJX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ceR-GE-B5D"/>
+                            <constraint firstItem="Pqz-Ix-ZJX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="e6t-E0-Vw5"/>
+                            <constraint firstItem="Pqz-Ix-ZJX" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="eOQ-ZZ-7Th"/>
+                            <constraint firstItem="X4H-Ol-W8H" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="tel-2Q-h45"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="NIBM-Logo.jpg" width="336" height="188"/>
+    </resources>
 </document>
